[package]
name = "keyboard-selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
web-sys = { version = "0.3.65", features = ["HtmlElement", "Window", "Document", "Element", "ScrollIntoViewOptions", "ScrollBehavior"] }
